--- a/css/started-template.css
+++ b/css/started-template.css
@@ -10,12 +10,15 @@
 .visible{ display: inline;}
 
 .container-precio{
-    background-color: antiquewhite;
+
     text-align: center;
 }
 .pedido{
     padding-top: 2rem;
-
     padding-left: 10rem;
     padding-right: 10rem;
+}
+.form {
+    display: flex;
+    justify-content: center;
 }
