Se agrega paginas y formulario de contacto con JS

--- a/css/started-template.css
+++ b/css/started-template.css
@@ -22,3 +22,21 @@
     display: flex;
     justify-content: center;
 }
+button{ 
+background-color:rgb(15, 89, 248);
+}
+/*FOOTER*/
+.footer {
+    padding-top: 1rem;
+    padding-bottom: 1.5rem;
+    background-color: #141414;
+    color: #fff;
+  }
+  
+  .copyright {
+    background-color: #575454;
+  }
+  
+  .btn {
+    box-shadow: 2px 2px 5px #aaa0a0;
+  }
